Wrap pre tags in dl.vars (fixes GH-1826)

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -976,6 +976,8 @@ dl.vars {
     font-size: 12px;
     color: @gray-dark;
     min-height: 36px;
+    white-space: pre-wrap;
+    word-break: break-all;
   }
 }
 
